# ProjektTestowanieOprogramowaniaNokia

./: .gitignore  .openapi.json  pyproject.toml  test_add_bearer.robot  test_attach_ue.robot  test_check_bearers.robot  test_check_transfer.robot  test_delete_bearer.robot  test_detach_ue.robot  test_reset_simulator.robot  test_start_traffic.robot  test_stop_traffic.robot
results/: Raport_z_testow_grXXXXXXXXXX.xlsx
