[project]
name = "testo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "robotframework>=7.4.2",
    "robotframework-jsonlibrary>=0.5",
    "robotframework-requests>=0.9.7",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
